# interpolation.py

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  Untitled.ipynb  basis_splines.py  codegen.py  dev.py  dev_bsplines.py  eval_cubic.py  eval_cubic_splines.py  eval_cubic_splines_cython.pyx.in  eval_cubic_splines_numba.py  eval_cubic_splines_numba.py.in  eval_splines.py  gen_splines.py  index.html  interpolation.ipynb  interpolation.py  jitfun.py  misc.py  mkdocs.yml  multilinear.py  multilinear_cython.pyx  multilinear_cython.pyx.in  multilinear_python.py  option_types.py  prefilter_cubic.py  pyproject.toml  scripting.py  setup.py  smolyak.py  splines.py  splines_cython.pyx  splines_cython.pyx.in  splines_numba.py  test_eval_splines.py  test_linear_base.py  test_misc.py  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bulid_doc.yaml  ci.yaml  publish-to-test-pypi.yml
conda/: meta.yaml
docs/: index.md  splines.md
examples/: Linear Bases.ipynb  cubic_splines_python.ipynb  example_mlinterp.py
interpolation/: __init__.py  cartesian.py  codegen.py  compat.py  complete_poly.py
interpolation/linear_bases/: basis.py  basis_chebychev.py  basis_linear.py  basis_splines.py  basis_splines_old.py  basis_uniform_cubic_splines.py  chebychev.py  compact_matrices.py  kronecker.py  linear.py  product.py  spline.py  splines_bases.py  templates.py  uniform_cubic_spline.py  util.py
interpolation/multilinear/: fungen.py  mlinterp.py
interpolation/smolyak/: __init__.py  grid.py  interp.py  util.py
misc/: Untitled.ipynb  alternative_implementations.py  eval_cubic_splines_cython.pyx  graph.ipynb  gu_vectorize.py  guvectorize.py  implementation_comparison.py  interactive_graph.json  interp_experiment.py  main.py  speed_comparison.ipynb  speed_comparison.py  speed_comparison_cuda.py  test.py  test_B_size.py  test_chebychev_base.py  test_cubic_base.py  test_linear_base.py  test_mem_alloc.py  test_poly.py  test_tensor.py  test_tensor_bases.py  test_types.py  try_jitclass.py
search/: search_index.json
splines/: index.html
tests/: test_spline_cython.py  test_spline_numba.py
tmp/: new_class.py  test_smolyak_derivatives.py
(+53 files in other folders)
